--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/006-Renderizado condicional.md",
-            "mode": "preview"
+            "file": "README.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/006-Renderizado condicional.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,13 +88,13 @@
   },
   "active": "41665a60eb704180",
   "lastOpenFiles": [
+    "README.md",
     "docs/006-Renderizado condicional.md",
     "docs/005-state.md",
     "docs/004-propiedades.md",
     "docs/003-componentes.md",
     "docs/002-sintaxis-JSX.md",
     "docs/Untitled 1.md",
-    "docs/001-create-react-app.md",
-    "README.md"
+    "docs/001-create-react-app.md"
   ]
 }
