--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "docs/008-eventos-y-binding.md",
+            "file": "README.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "docs/008-eventos-y-binding.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +88,8 @@
   },
   "active": "41665a60eb704180",
   "lastOpenFiles": [
+    "README.md",
+    "docs/009-eventos-y-property-initializers.md",
     "docs/008-eventos-y-binding.md",
     "docs/007-renderizado-de-elementos.md",
     "Pasted image 20220628061759.png",
@@ -95,8 +97,6 @@
     "docs/004-propiedades.md",
     "docs/003-componentes.md",
     "docs/002-sintaxis-JSX.md",
-    "docs/001-create-react-app.md",
-    "README.md",
-    "docs/006-Renderizado condicional.md"
+    "docs/001-create-react-app.md"
   ]
 }
