--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -89,14 +89,14 @@
   "active": "41665a60eb704180",
   "lastOpenFiles": [
     "README.md",
+    "docs/013-Hooks.md",
+    "docs/012-ciclo-de-vida-de-los-componentes.md",
+    "docs/011-comunicacion-entre-componentes.md",
+    "docs/010-eventos-nativos-sinteticos-y-personalizados.md",
     "docs/009-eventos-y-property-initializers.md",
     "docs/008-eventos-y-binding.md",
     "docs/007-renderizado-de-elementos.md",
     "Pasted image 20220628061759.png",
-    "docs/005-state.md",
-    "docs/004-propiedades.md",
-    "docs/003-componentes.md",
-    "docs/002-sintaxis-JSX.md",
-    "docs/001-create-react-app.md"
+    "docs/005-state.md"
   ]
 }
